--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,15 +3,15 @@
   <head>
     <title>Mia Johansson - Student &amp; Developer</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <header id="main_navigation" class="clearfix">
-      <a href="index.html" class="name">Mia Johansson</a>
+      <%= link_to "Mia Johansson", root_path, class: "name" %>
       <nav>
 
         <%= link_to "Articles", posts_path %>
@@ -20,5 +20,14 @@
       </nav>
     </header>
     <%= yield %>
+
+    <footer id="main_footer">
+      <p class="copyright">&copy; 2016 Mia Johansson</p>
+      <nav>
+        <a href="https://twitter.com/johanssonmia09" target="_blank"><i class="fa fa-twitter" aria-hidden="false"></i></a>
+        <a href="https://www.instagram.com/miajohansson9" target="_blank"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+      </nav>
+    </footer>
+
   </body>
 </html>
