--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,31 @@
-<%= @post.title %>
-<br />
-<%= @post.content %>
+<div class="skinny_wrapper wrapper_padding" id="post_show_content">
+  <header>
+    <p class="date"><%= @post.created_at.strftime('%A, %B %d')%></p>
+    <h1><%= @post.title %></h1>
+    <hr>
+  </header>
 
-<br />
-<br />
+  <div id="content">
+    <%= @post.content %>
+  <hr>
+
+  <div id="share_box">
+    <p>Share "<%= @post.title %>"</p>
+    <a onclick="javascript:window.open('http://twitter.com/share?text= Read this! <%= @post.title %> by @johanssonmia09 - &amp;<%= url_for([@post, {only_path:false}]) %>',
+      '_blank', 'width=800, height=500, top=200, left=300');void(0)">
+      <i class="fa fa-twitter"></i></i>
+    </a>
+    <a onclick="javascript:window.open('http://facebook.com/sharer/sharer.php?u=',
+      '_blank', 'width=800, height=500, top=200, left=300');void(0)">
+      <i class="fa fa-facebook"></i></i>
+    </a>
+    <a onclick="javascript:window.open('http://plus.google.com/share?url=<%= url_for([@post, {only_path:false}]) %> &amp;text=Read this! <%= @post.title %> by Mia Johansson - <%= request.original_url %>',
+      '_blank', 'width=800, height=500, top=200, left=300');void(0)">
+      <i class="fa fa-google-plus"></i></i>
+    </a>
+  </div>
+  <hr>
+</div>
 
 <%= link_to "Edit", edit_post_path(@post) %>
 <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
