--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <nav>
 
         <%= link_to "Articles", posts_path %>
-        <a id="hover_nav_2" href="#">Projects</a>
+        <%= link_to "Projects", projects_path %>
         <a id="hover_nav_3" href="contact.html">Contact</a>
       </nav>
     </header>
