--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -25,9 +25,9 @@
   <div class="col-3 homepage_content">
     <h2>My Projects</h2>
     <hr>
-    <h3><a href="#">This Blog</a></h3>
-    <p class="date">Friday April 10th</p>
-    <h3><a href="#">Times Table Math</a></h3>
-    <p class="date">Friday September 29th</p>
+    <% @projects.each do |project| %>
+      <h3><a href="#"><%= link_to project.title, project %></a></h3>
+      <p class="date"><%= project.created_at.strftime("%A, %b %d")%></p>
+    <% end %>
   </div>
 </div>
