--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -16,5 +16,5 @@
   </div>
 </div>
 
-<%= link_to "Edit", edit_post_path(@project) %>
-<%= link_to "Delete", post_path(@project), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %> -->
+<%= link_to "Edit", edit_project_path(@project) %>
+<%= link_to "Delete", project_path(@project), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
