Add conditional edit & destroy links & sign out link

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,12 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+.notice, .alert {
+  text-align: center;
+  padding: 1em 0;
+  border-bottom: 1px solid #E9E9E9;
+}
+
 .skinny_wrapper {
   width: 80%;
   max-width: 760px;
