--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,10 @@
 
         <%= link_to "Articles", posts_path %>
         <%= link_to "Projects", projects_path %>
-        <a id="hover_nav_3" href="contact.html">Contact</a>
+        <%= link_to "Contact", new_contact_path %>
+        <% if user_signed_in? %>
+          <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+        <% end %>
       </nav>
     </header>
 
