--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,6 +9,13 @@
     <%= markdown @post.content %>
   <hr>
 
+  <% if user_signed_in? %>
+      <div id="admin_links">
+        <%= link_to "Edit Article", edit_post_path(@post) %>
+        <%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %>
+      </div>
+  <% end %>
+
   <div id="share_box">
     <p>Share "<%= @post.title %>"</p>
     <a onclick="javascript:window.open('http://twitter.com/share?text= Read this! <%= @post.title %> by @johanssonmia09 - &amp;<%= url_for([@post, {only_path:false}]) %>',
@@ -29,6 +36,3 @@
   <%= render 'disqus' %>
 
 </div>
-
- <%= link_to "Edit", edit_post_path(@post) %>
-<%= link_to "Delete", post_path(@post), method: :delete, data: {confirm: "Are you sure you want to delete this post?"} %> -->
