--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,13 @@
 <div class="wrapper wrapper_padding clearfix">
   <div class="col-1 about homepage_content">
-    <h2>About Me</h2>
-    <hr>
+    <h2 class="About">About Me</h2>
+    <hr class="About">
+    <div class="profilepic">
+    </div>
+
     <p>Hi! My name is Mia. I'm a 16 year-old high school student &amp; aspiring developer
       living in Santa Rosa, California.</p>
-    <p>I spend most of my time studying, programming, and learning
+    <p>I spend a lot of my time studying, programming, and learning
       to program.</p>
       <p>I have an app on the app store called <a href="#">Times Table Math</a>.
       It won the Congressional App Challenge in 2016 and has been written about in the
