--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -1,4 +1,4 @@
-.col-1, .col-2, .col-3 {
+.col-1, .col-3 {
   float: left;
 }
 
@@ -12,6 +12,26 @@
   padding: 0 2.5%;
 }
 
+.col-2 {
+  width: 100%;
+  justify-content: left;
+  display: flex;
+  border-bottom: 1px solid $border;
+  .thumbnail {
+    width: 185px;
+    .image_thumbnail {
+      width: 180px;
+      margin: 5px;
+      height: 120px;
+      object-fit: cover;
+    }
+  }
+  .article_title {
+    margin-left: 4px;
+    margin-right: 5px;
+  }
+}
+
 .homepage_content {
   h2 {
     font-size: 1.1rem;
@@ -21,7 +41,8 @@
   h3 {
     font-size: 1.35em;
     font-weight: 400;
-    margin-bottom: .5rem;
+    margin-bottom: .2rem;
+    margin-top: 5px;
   }
   a {
     text-decoration: none;
@@ -31,9 +52,9 @@
     }
   }
   .date {
-    font-size: .85em;
-    margin-bottom: 2em;
+    font-size: .5em;
     color: $light;
+    margin-left: 4px;
   }
   p {
     margin: 0 0 .75em 0;
