--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mia Johansson - Student &amp; Developer</title>
+    <title>Mia Johansson♡</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <%= csrf_meta_tags %>
@@ -23,9 +23,6 @@
         <% end %>
       </nav>
     </header>
-
-
-
 
     <% if notice %>
       <p class="notice"><%= notice %></p>
