--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,9 +17,8 @@
 <%= f.label :content, "Write your article here" %><br>
 <%= f.text_area :content %>
 
-<br>
-<br>
-
-<%= f.submit %>
+<br><%= f.label :title %><br>
+<%= f.text_field :image %>
+<br><%= f.submit %>
 
 <% end %>
