--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -41,7 +41,7 @@
     .date {
       font-size: .9em;
       color: $light;
-      margin: 0;
+      margin-top: 50px;
     }
     h1 {
       margin: 0;
