--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -1,3 +1,5 @@
+$gray:  #2a2a2a;
+
 .col-1, .col-3 {
   float: left;
 }
@@ -7,29 +9,61 @@
   padding: 0 5% 0 2.5%;
 }
 
-.col-2, .col-3 {
+.col-3 {
   width: 27.5%;
   padding: 0 2.5%;
 }
 
 .col-2 {
-  width: 100%;
-  justify-content: left;
+  width: 95%;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 5px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  border-top: 1px solid $border;
   border-bottom: 1px solid $border;
   .thumbnail {
-    width: 185px;
-    .image_thumbnail {
-      width: 180px;
-      margin: 5px;
-      height: 120px;
-      object-fit: cover;
+    overflow: hidden;
+    width: 31%;
+    max-width: 350px;
+    margin: 5px;
+    &:hover {
+      .article_title {
+        background-color: transparentize($gray, 0.2);
+      }
     }
   }
-  .article_title {
-    margin-left: 4px;
-    margin-right: 5px;
-  }
+    .image_thumbnail {
+      width: 350px;
+      height: 240px;
+      object-fit: cover;
+      z-index: 1;
+      position: relative;
+      -moz-transition: all 0.3s;
+      -webkit-transition: all 0.3s;
+      transition: all 0.3s;
+      &:hover {
+        -moz-transform: scale(1.1);
+        -webkit-transform: scale(1.1);
+        transform: scale(1.1);
+      }
+    }
+    .article_title {
+      margin-top: -20px;
+      z-index: 5;
+      position: relative;
+      padding: 20px;
+      background-color: transparentize($gray, 0.4);
+      width: 350px;
+      a {
+        color: white;
+      }
+    }
 }
 
 .homepage_content {
