--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,8 +16,8 @@
 
 <div class="gray--background">
   <div class="home--main">
-    <img src="https://static.pexels.com/photos/6249/hands-woman-legs-laptop.jpg" class="home--image" />
-
+    <div class="home--image">
+    </div>
     <div class="flexbox">
       <div class="social--media">
         <a class="twitter-timeline" data-width="500" data-height="300" href="https://twitter.com/JohanssonMia09">Tweets by JohanssonMia09</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
