--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -105,8 +105,10 @@
 }
 
 .pagination {
-  text-align: center;
-  margin: 0 0 3em 0;
+  width: 241px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3em;
   a, .previous_page, .current, .next_page {
     padding: .75em 1em;
     margin: 0 .5em;
