--- a/app/assets/stylesheets/_welcome.css.scss
+++ b/app/assets/stylesheets/_welcome.css.scss
@@ -15,7 +15,8 @@ $gray:  #2a2a2a;
 }
 
 .col-2 {
-  width: 95%;
+  width: 100%;
+  max-width: 100%;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -23,14 +24,12 @@ $gray:  #2a2a2a;
   justify-content: center;
   padding-top: 10px;
   padding-bottom: 5px;
-  margin-top: 100px;
+  margin-top: 50px;
   margin-bottom: 100px;
-  border-top: 1px solid $border;
   border-bottom: 1px solid $border;
   .thumbnail {
     overflow: hidden;
-    width: 31%;
-    max-width: 350px;
+    width: 30%;
     margin: 5px;
     &:hover {
       .article_title {
@@ -39,8 +38,8 @@ $gray:  #2a2a2a;
     }
   }
     .image_thumbnail {
-      width: 350px;
-      height: 240px;
+      width: 100%;
+      height: 60%;
       object-fit: cover;
       z-index: 1;
       position: relative;
@@ -59,7 +58,7 @@ $gray:  #2a2a2a;
       position: relative;
       padding: 20px;
       background-color: transparentize($gray, 0.4);
-      width: 350px;
+      width: 100%;
       a {
         color: white;
       }
@@ -81,9 +80,6 @@ $gray:  #2a2a2a;
   a {
     text-decoration: none;
     color: $dark;
-    &:hover {
-      color: $highlight;
-    }
   }
   .date {
     font-size: .5em;
