--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,77 +1,89 @@
-<div class="homepage_content wrapper wrapper-padding">
-  <h2 class="projects--title">What I'm working on</h2>
-  <hr style="margin-top: 30px; margin-bottom: 10px;">
-  <div class="projects">
-    <% @projects.each do |project| %>
-    <%= link_to project do %>
-      <div class="each--project">
-          <h3><%= project.title %></h3>
-          <p class="date"><%= project.created_at.strftime("%A, %b %d")%></p>
-          <p class="content"><%= project.description %></p>
-      </div>
-    <% end %>
-    <% end %>
-  </div>
-</div>
-
-<div class="gray--background">
-  <div class="home--main">
-    <div class="home--image">
-    </div>
-    <div class="flexbox">
-      <div class="social--media">
-        <a class="twitter-timeline" data-width="500" data-height="300" href="https://twitter.com/JohanssonMia09">Tweets by JohanssonMia09</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-        <script src="//lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/bbc240f4af3552f29132e6bdbe4eb51a.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width: 500px; border: 0; overflow: hidden;"></iframe>
-        <style>.ig-b- { display: inline-block; }
-    .ig-b- img { visibility: hidden; }
-    .ig-b-:hover { background-position: 0 -60px; } .ig-b-:active { background-position: 0 -120px; }
-    .ig-b-v-24 { width: 137px; margin-top: 5px; float: right; margin-bottom: 10px; height: 24px; background: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24.png) no-repeat 0 0; }
-    @media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
-    .ig-b-v-24 { background-image: url(//badges.instagram.com/static/images/ig-badge-view-sprite-24@2x.png); background-size: 160px 178px; } }</style>
-    <a href="https://www.instagram.com/miajohanssonblog/?ref=badge" class="ig-b- ig-b-v-24"><img src="//badges.instagram.com/static/images/ig-badge-view-24.png" alt="Instagram" /></a>
-      </div>
-      <div class="container">
-        <div class="exclusive-offer">
-            <h5 class="exclusive-title" id="exclusive-title--id">Sign up now to become a VIP subscriber & get exclusive offers</h5>
-            <p class="exclusive-title">(Limited time only!)</p>
+<div class="body">
+  <div class="homepage_content wrapper wrapper-padding">
+    <h2 class="projects--title">What I'm working on</h2>
+    <hr style="margin-top: 30px; margin-bottom: 10px;">
+    <div class="projects">
+      <% @projects.each do |project| %>
+      <%= link_to project do %>
+        <div class="each--project">
+            <h3><%= project.title %></h3>
+            <p class="date"><%= project.created_at.strftime("%A, %b %d")%></p>
+            <p class="content"><%= project.description %></p>
         </div>
-      <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-      <div>
-        <div class="clearfix">
-          <div id="mc_embed_signup" class="home--signup">
-          <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-              <div id="mc_embed_signup_scroll">
-          	<h2 style="color: #696969;">Become a VIP subscriber:</h2>
-          <div class="mc-field-group">
-          	<label for="mce-EMAIL">Email Address </label>
-          	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="width: 300px;">
-          </div>
+      <% end %>
+      <% end %>
+    </div>
+  </div>
 
-          	<div id="mce-responses" class="clear">
-          		<div class="response" id="mce-error-response" style="display:none"></div>
-          		<div class="response" id="mce-success-response" style="display:none"></div>
-          	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+  <div class="gray--background">
+    <div class="home--main">
+      <div class="flexbox">
+        <div class="featured">
+
+          <% if @posts_featured %>
+            <div class="featured">
+              <%=link_to(image_tag(@posts_featured.image, :class => "image_thumbnail"), @posts_featured )%>
+              <h3 class="article_title"><a href="#"><%= link_to @posts_featured.title, @posts_featured %></a></h3>
+              <p class="date"><%= @posts_featured.created_at.strftime("%A, %b %d")%></p>
+            </div>
+          <% end %>
+        </div>
+        <div class="articles2-6">
+            <% @posts[1..4].each do |post| %>
+              <div class="thumbnail">
+                <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
+                <div class="thumbnail--container">
+                  <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
+                  <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
+                </div>
               </div>
-          </form>
-          </div>
+            <% end %>
         </div>
-       </div>
+        <div class="container">
+          <div class="exclusive-offer">
+              <h5 class="exclusive-title" id="exclusive-title--id">Sign up now to become a VIP subscriber & get exclusive offers</h5>
+              <p class="exclusive-title">(Limited time only!)</p>
+          </div>
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+        <div>
+          <div class="clearfix">
+            <div id="mc_embed_signup" class="home--signup">
+            <form action="//herokuapp.us14.list-manage.com/subscribe/post?u=5c2a24e15a906f29e2c6a9b72&amp;id=3081d2e76a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+            	<h2 style="color: #696969;">Become a VIP subscriber:</h2>
+            <div class="mc-field-group">
+            	<label for="mce-EMAIL">Email Address </label>
+            	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" style="width: 300px;">
+            </div>
+
+            	<div id="mce-responses" class="clear">
+            		<div class="response" id="mce-error-response" style="display:none"></div>
+            		<div class="response" id="mce-success-response" style="display:none"></div>
+            	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_5c2a24e15a906f29e2c6a9b72_3081d2e76a" tabindex="-1" value=""></div>
+                <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+            </form>
+            </div>
+          </div>
+         </div>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
+  <div class="flexbox--posts">
+    <div class="col-2 homepage_content">
+        <% @posts[5..7].each do |post| %>
+          <div class="thumbnail">
+            <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
+            <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
+            <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
+          </div>
+        <% end %>
+    </div>
+  </div>
 
-<div class="col-2 homepage_content">
-    <% @posts.each do |post| %>
-      <div class="thumbnail">
-        <%=link_to(image_tag(post.image, :class => "image_thumbnail"), post )%>
-        <h3 class="article_title"><a href="#"><%= link_to post.title, post %></a></h3>
-        <p class="date"><%= post.created_at.strftime("%A, %b %d")%></p>
-      </div>
-    <% end %>
 </div>
 
 
