--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -356,11 +356,95 @@ hr {
   .body {
     width: 100%;
   }
+  .featured {
+      .image_thumbnail {
+        width: 300px;
+        float: right;
+      }
+  }
+
+}
+
+@media (max-width: 1125px) {
+  .exclusive-offer, .signup {
+    display: none;
+  }
+  .featured {
+    width: 430px;
+    float: right;
+      .image_thumbnail {
+        width: 430px;
+      }
+  }
+  .articles2-6 {
+    width: 50%;
+  }
 }
 
 
-@media (max-width: 479px) {
+@media (max-width: 954px) {
+  .featured {
+    width: 350px;
+    margin-left: 10px;
+      .image_thumbnail {
+        width: 350px;
+        float: right;
+      }
+  }
+  .articles2-6 {
+    margin-left: 10px;
+    .article_title {
+      font-size: 15px;
+    }
+    .date {
+      display: none;
+    }
+  }
+}
 
+@media (max-width: 954px) {
+  .featured {
+    width: 350px;
+    margin-left: 10px;
+      .image_thumbnail {
+        width: 350px;
+        float: right;
+      }
+      .article_title {
+        width: 100%;
+      }
+  }
+  .articles2-6 {
+    margin-left: 10px;
+    .article_title {
+      font-size: 15px;
+    }
+    .date {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 730px) {
+  .featured {
+    width: 94%;
+    margin-left: 3%;
+    margin-right: 3%;
+      .image_thumbnail {
+        width: 100%;
+      }
+  }
+  .flexbox {
+    flex-direction: column;
+    height: 100%;
+  }
+  .articles2-6 {
+    width: 92%;
+    margin-left: 5%;
+    margin-right: 3%;
+    margin-bottom: 10px;
+    margin-top: 0px;
+  }
 }
 
 
