--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body onresize="resize()">
 
     <header id="main_navigation" class="clearfix">
       <%=link_to(image_tag("http://i1074.photobucket.com/albums/w412/mjohansson9/name_zps6gj1gsjw.png", :class => "name"), root_path )%>
