--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -246,30 +246,42 @@ body {
 
 #main_navigation {
   background-color: #2a2a2a;
-  margin-bottom: 2px;
+  margin-bottom: 10px;
+  width: 100%;
   .name {
-    float: left;
-    width: 300px;
-    margin-left: 20px;
-    margin-top: 15px;
-    margin-bottom: 13px;
+    display: block;
+    width: 400px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
   }
   nav {
-    float: right;
-    padding-top: 1.5rem;
-
+    margin-top: 10px;
+    border: 1px solid $border;
+    background-color: white;
+    position: relative;
+    display: block;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 50px;
     a {
-      color: white;
+      padding-top: 15px;
+      color: #2a2a2a;
       text-decoration: none;
-      margin: 0 1rem;
+      margin: 0 1.3rem;
       font-size: 1rem;
-      float: left;
+      font-family: 'Vollkorn', serif;
       &:hover {
         color: $highlight;
       }
     }
   }
 }
+
+
 
 #page_title {
   text-align: center;
@@ -509,9 +521,9 @@ hr {
 
 @media (max-width: 730px) {
   body {
-    .projects {
-      a {
-
+    .col-2 {
+      .thumbnail {
+        width: 48%;
       }
     }
   }
