--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -41,15 +41,22 @@ body {
 button {
   display: none;
 }
+footer {
+  background-color: #2b2b2b;
+  color: white;
+  a {
+    color: white;
+  }
+}
 
 .projects {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   a {
+    width: 33%;
     height: 270px;
     position: relative;
-    width: 32.5%;
+    padding: 13px;
     &:hover {
       h3, .content, .date {
         color: $highlight;
@@ -68,16 +75,7 @@ button {
 
 ///////////////////////////////////////////////////////////////////////////
 
-
 .home--main {
-  width: 100%;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.gray--background {
-  border-top:  1px solid #E9E9E9;
-  border-bottom:  1px solid #E9E9E9;
   width: 100%;
 }
 
@@ -185,44 +183,42 @@ button {
 .container {
   display: flex;
   flex-direction: column;
+  width: 350px;
+  .exclusive-offer {
+    width: 100%;
+    height: 210px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url("http://i1074.photobucket.com/albums/w412/mjohansson9/backgroundimage_zps8rmwfdj1.png");      //#ff7a8f;
+    background-position: center;
+    margin-left: 15px;
+    margin-top: 40px;
+    margin-bottom: -10px;
+    #exclusive-title--id {
+      margin-top: 50px;
+      margin-bottom: 5px;
+    }
+    .exclusive-title {
+      color: white;
+      text-align: center;
+      margin-left: 10px;
+      margin-right: 10px;
+    }
+  }
 }
 
 .flexbox {
   display: flex;
   justify-content: center;
-  border-bottom:1px solid  #E9E9E9;
   height: 525px;
-}
-
-.exclusive-offer {
-  width: 325px;
-  height: 200px;
-  background-image: url("http://i1074.photobucket.com/albums/w412/mjohansson9/backgroundimage_zps8rmwfdj1.png");      //#ff7a8f;
-  background-size: 100% 100%;
-  margin-left: 15px;
-  margin-top: 40px;
-  margin-bottom: -10px;
-  #exclusive-title--id {
-    margin-top: 50px;
-    margin-bottom: 5px;
-  }
-  .exclusive-title {
-    color: white;
-    text-align: center;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
+  margin-left: auto;
+  margin-right: auto;
 }
 
 body {
   form {
     padding: 0;
-  }
-  #mc_embed_signup {
-    margin-left: 0;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    padding-right: 10px;
+    width: 100%;
   }
 }
 
@@ -295,12 +291,16 @@ body {
   float:left;
   font:14px Helvetica,Arial,sans-serif;
   color: #939393;
-  margin-bottom: 50px;
-  margin-left: 20px;
+  margin-left: 6px;
+  margin-top: 10px;
+  margin-bottom: 20px;
+  width: 358px;
 }
 
 #mce-EMAIL {
   margin-bottom: 0px;
+  width: 100%;
+  margin-right: 0;
 }
 
 #main_footer {
@@ -314,11 +314,10 @@ body {
   nav {
     float: right;
     i {
-      color: $dark;
       margin-left: 1em;
       padding-top: .2em;
       &:hover {
-        color: $highlight;
+        color: $dark;
       }
     }
   }
@@ -351,10 +350,6 @@ input[type="submit"] {
     border: 2px solid $highlight;
     color: $highlight;
   }
-}
-
-h1, h2, h3, h4, h5, h6, p, ul, li {
-  color: $dark;
 }
 
 h1 {
@@ -399,15 +394,20 @@ hr {
   margin: 2rem 0;
 }
 
-.full {
-  width: 33%;
-  display: block;
-}
-
-
 @media (max-width: 1400px) {
   .body {
     width: 100%;
+  }
+  .container {
+    width: 290px;
+  }
+  .exclusive-offer {
+    width: 300px;
+  }
+  body {
+    #mc_embed_signup {
+      width: 300px;
+    }
   }
   .featured {
       .image_thumbnail {
@@ -419,7 +419,7 @@ hr {
 }
 
 @media (max-width: 1125px) {
-  .exclusive-offer, .signup {
+  .exclusive-offer, .signup, .container {
     display: none;
   }
   .featured {
@@ -466,6 +466,8 @@ hr {
       button {
         display: block;
         background-image: url("http://i1074.photobucket.com/albums/w412/mjohansson9/arrow_zpsr7sagjy6.png");
+        filter: invert(100%);
+        -webkit-filter: invert(100%);
         background-repeat: no-repeat;
         width: 30px;
         height: 30px;
@@ -496,7 +498,6 @@ hr {
       display: none;
     }
   }
-
   .featured {
     width: 350px;
     margin-left: 10px;
