--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>19 ❤ Campus</title>
+    <title>The Teen Magazine</title>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
-    <link rel="icon" href="http://i1074.photobucket.com/albums/w412/mjohansson9/19_zpsfuv3ct9v.png">
+    <link rel="icon" href="http://i1074.photobucket.com/albums/w412/mjohansson9/v4_zpstmsr1d3v.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link href="https://fonts.googleapis.com/css?family=Kameron:700|Vollkorn:700" rel="stylesheet">
 
@@ -18,7 +18,7 @@
 
     <header id="main_navigation" class="clearfix">
       <div class="border">
-        <%=link_to(image_tag("http://i1074.photobucket.com/albums/w412/mjohansson9/19campus3_zpsih4jkpjq.png", :class => "name"), root_path )%>
+        <%=link_to(image_tag("http://i1074.photobucket.com/albums/w412/mjohansson9/theteenmagazine_zpspsnrohxc.png", :class => "name"), root_path )%>
         <nav>
           <%= link_to "Home", root_path %>
           <%= link_to "Articles", posts_path %>
