--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -247,9 +247,10 @@ body {
   width: 100%;
   .name {
     display: block;
-    width: 400px;
-    margin-top: 30px;
-    margin-bottom: 20px;
+    max-width: 750px;
+    width: 90%;
+    margin-top: 55px;
+    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
   }
