--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -242,12 +242,12 @@ body {
 }
 
 #main_navigation {
-  background-color: #2a2a2a;
+  background-color: black;
   margin-bottom: 10px;
   width: 100%;
   .name {
     display: block;
-    max-width: 750px;
+    max-width: 800px;
     width: 90%;
     margin-top: 55px;
     margin-bottom: 10px;
